--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -922,6 +922,29 @@
 .game-title-input {
   -fx-font-size: 0.8cm;
 }
+.game-generate-map {
+  -fx-background-color: -dimmed-accent;
+  -fx-graphic-text-gap: 0.7em;
+}
+.game-generate-map:hover {
+  -fx-background-color: -fx-accent;
+}
+.button.more-button-padding {
+  -fx-padding: 0.7em 5em;
+}
+
+.button-mini-label {
+  -fx-font-size: 0.7em;
+  -fx-background-radius: 3;
+  -fx-padding: 0.16em 0.4em;
+
+  -fx-text-fill: -fx-dark-text-color;
+  -fx-background-color: -orange-500;
+}
+
+.create-game-dual-list-cell > .right-label {
+  -fx-text-fill: -fx-mid-text-color;
+}
 
 /***************** Settings window *****************/
 
