move "more" buttons inside flowPanes

--- a/src/main/resources/theme/vault/map/map_vault.fxml
+++ b/src/main/resources/theme/vault/map/map_vault.fxml
@@ -1,33 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXSpinner?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="mapVaultRoot" xmlns="http://javafx.com/javafx/10.0.2"
-           fx:controller="com.faforever.client.map.MapVaultController">
+<?import com.jfoenix.controls.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<StackPane fx:id="mapVaultRoot" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.map.MapVaultController">
     <children>
         <ScrollPane fx:id="scrollPane" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
             <content>
                 <VBox spacing="10.0">
                     <children>
-                        <fx:include fx:id="search" source="../search/search.fxml"/>
-                        <Separator maxWidth="1.7976931348623157E308"/>
+                        <fx:include fx:id="search" source="../search/search.fxml" />
+                        <Separator maxWidth="1.7976931348623157E308" />
                         <HBox spacing="10.0">
                             <children>
-                                <JFXButton fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClicked"
-                                           text="%back">
+                                <JFXButton fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClicked" text="%back">
                                     <graphic>
-                                        <Label styleClass="icon" text=""/>
+                                        <Label styleClass="icon" text="" />
                                     </graphic>
                                 </JFXButton>
                                 <JFXButton mnemonicParsing="false" onAction="#onRefreshButtonClicked" text="%refresh">
@@ -35,96 +25,85 @@
                                         <Label styleClass="icon" text="" />
                                     </graphic>
                                 </JFXButton>
-                                <JFXButton mnemonicParsing="false" onAction="#onUploadMapButtonClicked"
-                                           text="%mapVault.upload">
+                                <JFXButton mnemonicParsing="false" onAction="#onUploadMapButtonClicked" text="%mapVault.upload">
                                     <graphic>
-                                        <Label styleClass="icon" text=""/>
+                                        <Label styleClass="icon" text="" />
                                     </graphic>
                                 </JFXButton>
                             </children>
                         </HBox>
-                        <GridPane fx:id="showroomGroup" vgap="10.0">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-                            </rowConstraints>
+                        <VBox fx:id="showroomGroup" spacing="10.0">
                             <children>
                                 <Label styleClass="h2" text="%mapVault.recommended" />
-                                <JFXButton fx:id="moreRecommendedButton" mnemonicParsing="false" onAction="#showMoreRecommendedMaps"
-                                           text="%more" GridPane.columnIndex="1"/>
-                                <FlowPane fx:id="recommendedPane" hgap="10.0" maxWidth="1.7976931348623157E308" prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-                                <Label styleClass="h2" text="%mapVault.mostLikedMaps" GridPane.rowIndex="2"/>
-                                <JFXButton fx:id="moreMostLikedButton" mnemonicParsing="false" onAction="#showMoreHighestRatedMaps"
-                                           text="%more" GridPane.columnIndex="1"
-                                           GridPane.rowIndex="2"/>
-                                <FlowPane fx:id="mostLikedPane" hgap="10.0" maxWidth="1.7976931348623157E308" prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
-                                <Label styleClass="h2" text="%mapVault.newestMaps" GridPane.rowIndex="4" />
-                                <JFXButton fx:id="moreNewestButton" mnemonicParsing="false" onAction="#showMoreMostRecentMaps"
-                                           text="%more" GridPane.columnIndex="1"
-                                           GridPane.rowIndex="4"/>
-                                <FlowPane fx:id="newestPane" hgap="10.0" maxWidth="1.7976931348623157E308" prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
-                                <Label styleClass="h2" text="%mapVault.mostPlayed" GridPane.rowIndex="6" />
-                                <JFXButton fx:id="moreMostPlayedButton" mnemonicParsing="false" onAction="#showMoreMostPlayedMaps"
-                                           text="%more" GridPane.columnIndex="1"
-                                           GridPane.rowIndex="6"/>
-                                <FlowPane fx:id="mostPlayedPane" hgap="10.0" maxWidth="1.7976931348623157E308" prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="7" />
-                                <Label styleClass="h2" text="%mapVault.ladder" GridPane.rowIndex="8"/>
-                                <JFXButton fx:id="moreLadderButton" mnemonicParsing="false" onAction="#showMoreLadderdMaps"
-                                           text="%more" GridPane.columnIndex="1"
-                                           GridPane.rowIndex="8"/>
-                                <FlowPane fx:id="ladderPane" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                          prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647"
-                                          GridPane.rowIndex="9"/>
-                                <Label fx:id="ownedMoreLabel" styleClass="h2" text="%mapVault.owned"
-                                       GridPane.rowIndex="10"/>
-                                <JFXButton fx:id="ownedMoreButton" mnemonicParsing="false" onAction="#showMoreOwnedMaps"
-                                           text="%more" GridPane.columnIndex="1"
-                                           GridPane.rowIndex="10"/>
-                                <FlowPane fx:id="ownedPane" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                          prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647"
-                                          GridPane.rowIndex="11"/>
+                                <FlowPane fx:id="recommendedPane" hgap="10.0" maxWidth="1.7976931348623157E308" prefWrapLength="1500.0" vgap="10.0">
+                                    <JFXButton fx:id="moreRecommendedButton" mnemonicParsing="false" onAction="#showMoreRecommendedMaps" text="%more">
+                                      <FlowPane.margin>
+                                         <Insets left="80.0" />
+                                      </FlowPane.margin>
+                                    </JFXButton>
+                                </FlowPane>
+                                <Label styleClass="h2" text="%mapVault.mostLikedMaps" />
+                                <FlowPane fx:id="mostLikedPane" hgap="10.0" maxWidth="1.7976931348623157E308" prefWrapLength="1500.0" vgap="10.0">
+                                    <JFXButton fx:id="moreMostLikedButton" mnemonicParsing="false" onAction="#showMoreHighestRatedMaps" text="%more">
+                                        <FlowPane.margin>
+                                            <Insets left="80.0" />
+                                        </FlowPane.margin>
+                                    </JFXButton>
+                                </FlowPane>
+                                <Label styleClass="h2" text="%mapVault.newestMaps" />
+                                <FlowPane fx:id="newestPane" hgap="10.0" maxWidth="1.7976931348623157E308" prefWrapLength="1500.0" vgap="10.0">
+                                    <JFXButton fx:id="moreNewestButton" mnemonicParsing="false" onAction="#showMoreMostRecentMaps" text="%more">
+                                        <FlowPane.margin>
+                                            <Insets left="80.0" />
+                                        </FlowPane.margin>
+                                    </JFXButton>
+                                </FlowPane>
+                                <Label styleClass="h2" text="%mapVault.mostPlayed" />
+                                <FlowPane fx:id="mostPlayedPane" hgap="10.0" maxWidth="1.7976931348623157E308" prefWrapLength="1500.0" vgap="10.0">
+                                    <JFXButton fx:id="moreMostPlayedButton" mnemonicParsing="false" onAction="#showMoreMostPlayedMaps" text="%more">
+                                        <FlowPane.margin>
+                                            <Insets left="80.0" />
+                                        </FlowPane.margin>
+                                    </JFXButton>
+                                </FlowPane>
+                                <Label styleClass="h2" text="%mapVault.ladder" />
+                                <FlowPane fx:id="ladderPane" hgap="10.0" maxWidth="1.7976931348623157E308" prefWrapLength="1500.0" vgap="10.0">
+                                    <JFXButton fx:id="moreLadderButton" mnemonicParsing="false" onAction="#showMoreLadderdMaps" text="%more">
+                                        <FlowPane.margin>
+                                            <Insets left="80.0" />
+                                        </FlowPane.margin>
+                                    </JFXButton>
+                                </FlowPane>
+                                <Label fx:id="ownedMoreLabel" styleClass="h2" text="%mapVault.owned" />
+                                <FlowPane fx:id="ownedPane" hgap="10.0" maxWidth="1.7976931348623157E308" prefWrapLength="1500.0" vgap="10.0">
+                                    <JFXButton fx:id="ownedMoreButton" mnemonicParsing="false" onAction="#showMoreOwnedMaps" text="%more">
+                                        <FlowPane.margin>
+                                            <Insets left="80.0" />
+                                        </FlowPane.margin>
+                                    </JFXButton>
+                                </FlowPane>
                             </children>
-                        </GridPane>
+                        </VBox>
                         <VBox fx:id="searchResultGroup" alignment="TOP_CENTER" spacing="10.0">
                             <children>
-                                <Label maxWidth="1.7976931348623157E308" styleClass="h2" text="%searchResult"/>
+                                <Label maxWidth="1.7976931348623157E308" styleClass="h2" text="%searchResult" />
                                 <FlowPane fx:id="searchResultPane" hgap="10.0" vgap="10.0" />
                                 <HBox fx:id="paginationHBox" alignment="TOP_CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
-                                    <JFXButton fx:id="previousButton" layoutX="719.0" layoutY="10.0"
-                                               mnemonicParsing="false" onAction="#onLoadPreviousButtonClicked"
-                                               text="%vault.previous"/>
-                                    <Label fx:id="currentPageLabel" maxHeight="1.7976931348623157E308"
-                                           text="&lt;current page&gt;"/>
-                                    <JFXButton fx:id="nextButton" mnemonicParsing="false"
-                                               onAction="#onLoadNextButtonClicked" text="%vault.next"/>
+                                    <JFXButton fx:id="previousButton" layoutX="719.0" layoutY="10.0" mnemonicParsing="false" onAction="#onLoadPreviousButtonClicked" text="%vault.previous" />
+                                    <Label fx:id="currentPageLabel" maxHeight="1.7976931348623157E308" text="&lt;current page&gt;" />
+                                    <JFXButton fx:id="nextButton" mnemonicParsing="false" onAction="#onLoadNextButtonClicked" text="%vault.next" />
                                 </HBox>
 
                             </children>
                         </VBox>
-                        <Label fx:id="loadingLabel" alignment="CENTER" contentDisplay="TOP"
-                               maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                               text="%mapVault.loadingMaps" VBox.vgrow="ALWAYS">
+                        <Label fx:id="loadingLabel" alignment="CENTER" contentDisplay="TOP" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%mapVault.loadingMaps" VBox.vgrow="ALWAYS">
                             <graphic>
-                                <JFXSpinner/>
+                                <JFXSpinner />
                             </graphic>
                         </Label>
                     </children>
                     <padding>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                     </padding>
                 </VBox>
             </content>
