--- a/src/main/resources/theme/vault/mod/mod_vault.fxml
+++ b/src/main/resources/theme/vault/mod/mod_vault.fxml
@@ -3,15 +3,11 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXSpinner?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="modVaultRoot" xmlns="http://javafx.com/javafx/8.0.111"
@@ -45,42 +41,42 @@
                                 </JFXButton>
                             </children>
                         </HBox>
-                        <GridPane fx:id="showroomGroup" vgap="10.0">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-                            </rowConstraints>
+                        <VBox fx:id="showroomGroup" spacing="10.0">
                             <children>
                                 <Label styleClass="h2" text="%modVault.highestRatedUiMods"/>
-                                <JFXButton mnemonicParsing="false" onAction="#showMoreHighestRatedUiMods"
-                                           fx:id="moreHighestRatedUiButton"  text="%more" GridPane.columnIndex="1"/>
                                 <FlowPane fx:id="highestRatedUiPane" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                          prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647"
-                                          GridPane.rowIndex="1"/>
-                                <Label styleClass="h2" text="%modVault.newestMods" GridPane.rowIndex="2"/>
-                                <JFXButton mnemonicParsing="false" onAction="#showMoreNewestMods"
-                                           fx:id="moreNewestButton"
-                                           text="%more" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                          prefWrapLength="1500.0" vgap="10.0" >
+                                    <JFXButton mnemonicParsing="false" onAction="#showMoreHighestRatedUiMods"
+                                               fx:id="moreHighestRatedUiButton"  text="%more" >
+                                        <FlowPane.margin>
+                                            <Insets left="80.0" />
+                                        </FlowPane.margin>
+                                    </JFXButton>
+                                </FlowPane>
+                                <Label styleClass="h2" text="%modVault.newestMods" />
                                 <FlowPane fx:id="newestPane" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                          prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647"
-                                          GridPane.rowIndex="3"/>
-                                <Label styleClass="h2" text="%modVault.highestRated" GridPane.rowIndex="4"/>
-                                <JFXButton mnemonicParsing="false" onAction="#showMoreHighestRatedMods"
-                                           fx:id="moreHighestRatedButton"
-                                           text="%more" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+                                          prefWrapLength="1500.0" vgap="10.0" >
+                                    <JFXButton mnemonicParsing="false" onAction="#showMoreNewestMods"
+                                               fx:id="moreNewestButton"
+                                               text="%more" >
+                                        <FlowPane.margin>
+                                            <Insets left="80.0" />
+                                        </FlowPane.margin>
+                                    </JFXButton>
+                                </FlowPane>
+                                <Label styleClass="h2" text="%modVault.highestRated" />
                                 <FlowPane fx:id="highestRatedPane" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                          prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647"
-                                          GridPane.rowIndex="5"/>
+                                          prefWrapLength="1500.0" vgap="10.0" >
+                                    <JFXButton mnemonicParsing="false" onAction="#showMoreHighestRatedMods"
+                                               fx:id="moreHighestRatedButton"
+                                               text="%more" >
+                                        <FlowPane.margin>
+                                            <Insets left="80.0" />
+                                        </FlowPane.margin>
+                                    </JFXButton>
+                                </FlowPane>
                             </children>
-                        </GridPane>
+                        </VBox>
                         <VBox fx:id="searchResultGroup" alignment="TOP_CENTER" spacing="10.0">
                             <children>
                                 <Label maxWidth="1.7976931348623157E308" styleClass="h2" text="%searchResult"/>
