--- a/src/main/resources/theme/vault/mod/mod_vault.fxml
+++ b/src/main/resources/theme/vault/mod/mod_vault.fxml
@@ -5,21 +5,21 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="modVaultRoot" xmlns="http://javafx.com/javafx/8.0.111"
            fx:controller="com.faforever.client.mod.ModVaultController">
-    <children>
+    <HBox>
+        <ScrollPane fx:id="searchScrollPane" hbarPolicy="NEVER">
+            <fx:include fx:id="search" source="../search/search.fxml"/>
+        </ScrollPane>
         <ScrollPane fx:id="scrollPane" fitToWidth="true" maxHeight="1.7976931348623157E308"
-                    maxWidth="1.7976931348623157E308">
+                    maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" prefWidth="10.0">
             <content>
                 <VBox spacing="10.0">
                     <children>
-                        <fx:include fx:id="search" source="../search/search.fxml"/>
-                        <Separator maxWidth="1.7976931348623157E308"/>
                         <HBox spacing="10.0">
                             <children>
                                 <JFXButton fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClicked"
@@ -84,10 +84,10 @@
                         </Label>
                     </children>
                     <padding>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                        <Insets bottom="20.0" left="10.0" right="20.0" top="20.0"/>
                     </padding>
                 </VBox>
             </content>
         </ScrollPane>
-    </children>
+    </HBox>
 </StackPane>
