--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -556,9 +556,8 @@
 /***************** Tabs *****************/
 
 .tab-header-area {
-  -fx-border-color: black;
+  -fx-border-color: -fx-box-border;
   -fx-border-width: 0 0 1 0;
-  -fx-padding: 0 0 0 20;
 }
 
 .tab-header-background {
@@ -569,12 +568,16 @@
   -fx-background-color: -fx-outer-border, -fx-inner-border, -fx-accent;
 }
 
+.tab-pane > .tab-header-area {
+  -fx-padding: 0;
+  -fx-border-width: 0;
+}
+
 .tab-pane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
   -fx-border-width: 0;
 }
 
 .tab {
-  -fx-font-size: 1.1em;
   -fx-background-color: transparent;
   -fx-border-color: transparent;
 }
@@ -584,13 +587,25 @@
 }
 
 .tab:selected {
-  -fx-background-color: -card-color;
   -fx-border-color: -fx-accent;
 }
 
+.tab-label {
+  -fx-padding: 0 4 0 0;
+}
+
 .tab:top {
-  -fx-padding: 5 20;
-  -fx-border-width: 0 0 4 0;
+  -fx-padding: 10 15;
+  -fx-border-width: 0 0 2 0;
+}
+
+.tab:left {
+  /* Since the text is rotated 90°, these values are as well (right is top, width is height) */
+  -fx-border-width: 4 0 0 0;
+}
+
+.tab:left .label {
+  -fx-padding: 0 0 0 1em;
 }
 
 /***************** Headers *****************/
@@ -747,9 +762,9 @@
   -fx-color: transparent;
   -fx-font-size: 1.2em;
   -fx-padding: 10 20;
-  -fx-border-width: 0 0 4 0;
+  -fx-border-width: 0 0 2 0;
   -fx-border-color: transparent;
-  -fx-max-height: 60;
+  -fx-max-height: Infinity;
 }
 
 .main-navigation-button:highlighted {
@@ -762,7 +777,7 @@
 }
 
 .main-navigation-button:armed, .main-navigation-button:selected, .main-navigation-button:focused:selected {
-  -fx-background-color: -card-color;
+  -fx-background-color: transparent;
   -fx-border-color: -fx-accent;
 }
 
