Ask user for tab to start
User is asked what tab he wants to start in instead of taking last tab as starting point.
Fixes #1723

--- a/src/main/resources/theme/main.fxml
+++ b/src/main/resources/theme/main.fxml
@@ -47,7 +47,7 @@
                                 </styleClass>
                             </MenuButton>
                             <ToggleButton fx:id="newsButton" mnemonicParsing="false" onAction="#onNavigateButtonClicked"
-                                          styleClass="main-navigation-button" text="%main.community.news">
+                                          styleClass="main-navigation-button" text="%main.news">
                                 <toggleGroup>
                                     <ToggleGroup fx:id="mainNavigation"/>
                                 </toggleGroup>
